plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

sourceSets {
    api {
        java.srcDirs = ['src/api/java']
    }
    pathfinder {
        java.srcDirs = ['src/pathfinder/java']
        compileClasspath += sourceSets.api.output
    }
    main {
        java.srcDirs = ['src/layer/java']
        resources.srcDirs = ['src/layer/resources']
        compileClasspath += sourceSets.api.output
        compileClasspath += sourceSets.pathfinder.output
    }
    test {
        java.srcDirs = ['src/test/java']
        compileClasspath += sourceSets.api.output
        compileClasspath += sourceSets.pathfinder.output
        runtimeClasspath += sourceSets.api.output
        runtimeClasspath += sourceSets.pathfinder.output
    }
}

loom {
    splitEnvironmentSourceSets()
    mods {
        melonfinder {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

// api and pathfinder are MC-free — Loom must not touch them.
// Append their compiled output to run tasks after Loom has finished configuring them.
afterEvaluate {
    def extraDirs = files(sourceSets.api.output.classesDirs, sourceSets.pathfinder.output.classesDirs)
    tasks.named('runClient').configure { classpath += extraDirs }
    tasks.named('runServer').configure { classpath += extraDirs }
}

// client source set is created by splitEnvironmentSourceSets(); configure it after loom
// api and pathfinder are intentionally Minecraft-free — do NOT add them to loom mods block
sourceSets.client {
    java.srcDirs = ['src/client/java']
    compileClasspath += sourceSets.main.output
    compileClasspath += sourceSets.api.output
    compileClasspath += sourceSets.pathfinder.output
}

configurations {
    apiImplementation.extendsFrom implementation
    pathfinderImplementation.extendsFrom implementation
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // JetBrains annotations for @Nonnull/@Nullable/@ApiStatus
    implementation 'org.jetbrains:annotations:24.0.1'

    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()
}

jar {
    inputs.property "archivesName", project.base.archivesName
    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
    from sourceSets.api.output
    from sourceSets.pathfinder.output
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}
